fixed z-index issue, added landing page description

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ nav {
   justify-content: space-between;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .navbar-logo {
@@ -66,7 +67,6 @@ nav {
 
 .landingCat {
   position: absolute;
-  z-index: 1;
   top:40%;
   left: 60%;
   height: 40vh;
@@ -82,7 +82,6 @@ main {
   color: white;
   position: relative;
   margin-bottom: -90vh;
-  z-index: 2;
 }
 
 footer {
